# domeneshop-ddns

./: .gitignore  Cargo.toml  Dockerfile  README.md  release.sh
.github/workflows/: ci.yml
src/: config.rs  main.rs
