[package]
name = "domeneshop-ddns"
version = "0.1.1"
edition = "2021"

[dependencies]

tokio = { version = "1.48.0", features = ["full"] }
reqwest = "0.12.26"
anyhow = "1.0.100"
futures = "0.3.31"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-log = "0.2.0"
