[package]
name = "domeneshop-ddns"
version = "0.1.1"
edition = "2021"

[dependencies]

tokio = { version = "1.49.0", features = ["full"] }
reqwest = "0.12.28"
anyhow = "1.0.101"
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-log = "0.2.0"
